--- a/springboot-helloworld/pom.xml
+++ b/springboot-helloworld/pom.xml
@@ -3,4 +3,13 @@
   <groupId>com.bitacademy</groupId>
   <artifactId>springboot-helloworld</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.outputEncoding>UTF-8</project.build.outputEncoding>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+		<org.springframework-version>5.3.25</org.springframework-version>  <!-- 사용자 설정 property. 여기만 바꾸면 아래가 다 바뀜-->
+	</properties>
+
 </project>
